graphicdir = $(datadir)/ivan/Graphics
graphic_DATA = Char.pcx Cursor.pcx Effect.pcx Enner.pcx Font.pcx FOW.pcx GLTerra.pcx Humanoid.pcx Icon.bmp Item.pcx IVlad.pcx Menu.pcx OLTerra.pcx Smiley.pcx Symbol.pcx WTerra.pcx
EXTRA_DIST = Char.pcx Cursor.pcx Effect.pcx Enner.pcx Font.pcx FOW.pcx GLTerra.pcx Humanoid.pcx Icon.bmp Item.pcx IVlad.pcx Menu.pcx OLTerra.pcx Smiley.pcx Symbol.pcx WTerra.pcx
