noinst_LIBRARIES = libFeAudio.a
noinst_HEADERS = audio_stack.h audio.h linkedlist.h MIDICodes.h MIDIDebug.h midiparser.h midiplayback.h MIDIUtils.h RtMidi.h
libFeAudio_a_SOURCES = audio_stack.cpp audio.cpp linkedlist.cpp MIDIDebug.cpp midiparser.cpp midiplayback.cpp MIDIUtils.cpp RtMidi.cpp
AM_CPPFLAGS = -I@top_srcdir@/FeLib/Include -I@top_srcdir@/Main/Include
