set(IGOR_VERSION 1.203)

include(FindPkgConfig)
if(PKG_CONFIG_FOUND)
  pkg_check_modules(PCRE libpcre)
  set(PCRE_LIBRARIES ${PCRE_LDFLAGS})
endif()
if(NOT PCRE_FOUND)
  if(MSVC)
    find_path(PCRE_INCLUDE_DIR NAMES pcre.h)
    find_library(PCRE_LIBRARY pcre)
  endif()
  find_package(PCRE REQUIRED)
  add_definitions(${PCRE_DEFINITIONS})
endif()

add_executable(igor EXCLUDE_FROM_ALL Source/igor.cpp)
target_include_directories(igor PUBLIC ../Felib/Include ${PCRE_INCLUDE_DIRS})
target_link_libraries(igor FeLib xbrzscale ${PCRE_LIBRARIES})
