AC_INIT(igor,1.203)
AC_CANONICAL_TARGET

AC_CONFIG_SRCDIR(Source/igor.cpp)
AM_INIT_AUTOMAKE([foreign])
AM_PROG_AS 
AM_INIT_AUTOMAKE([foreign],igor,1.203)
AC_PROG_CC

AC_PROG_CXX

dnl Check for SDL
SDL_VERSION=1.2.0
AM_PATH_SDL($SDL_VERSION,
            :,
            AC_MSG_ERROR([*** SDL version $SDL_VERSION not found!])
)

CFLAGS="$CFLAGS $SDL_CFLAGS "
LIBS="$LIBS $SDL_LIBS"

CPPFLAGS="$SDL_CFLAGS -DLINUX -DUSE_SDL -DGCC"

AC_PROG_INSTALL

AC_PROG_RANLIB

AC_OUTPUT(Makefile Source/Makefile Include/Makefile)
