bin_PROGRAMS = ivan
INCLUDES=-I@top_srcdir@/FeLib/Include -I@top_srcdir@/Main/Include
ivan_SOURCES = actset.cpp areaset.cpp charset.cpp charsset.cpp command.cpp coreset.cpp dataset.cpp dungeon.cpp game.cpp godset.cpp iconf.cpp id.cpp igraph.cpp itemset.cpp levelset.cpp main.cpp materset.cpp message.cpp object.cpp roomset.cpp script.cpp slotset.cpp trapset.cpp wmapset.cpp wskill.cpp
ivan_LDADD = @top_builddir@/FeLib/Source/libFeLib.a
EXTRA_DIST = action.cpp actions.cpp area.cpp bodypart.cpp char.cpp cont.cpp database.cpp entity.cpp fluid.cpp gear.cpp god.cpp gods.cpp human.cpp item.cpp level.cpp lsquare.cpp lterra.cpp lterras.cpp materia.cpp materias.cpp miscitem.cpp nonhuman.cpp pool.cpp proto.cpp rain.cpp room.cpp rooms.cpp slot.cpp smoke.cpp square.cpp stack.cpp team.cpp terra.cpp trap.cpp traps.cpp worldmap.cpp wsquare.cpp wterra.cpp wterras.cpp
